--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
              <dl>
              <dt>Rating<span>:</span></dt>
              <dd>
-                <figure class="4Stars">
+                <figure class="fourStars">
                   <figcaption>4 of 5 Stars</figcaption>
                   <!--stars ssvgs-->
                   <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-star" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="#ffffff" stroke-linecap="round" stroke-linejoin="round">
@@ -169,7 +169,7 @@
             <dl>
              <dt>Rating<span>:</span></dt>
              <dd>
-                <figure class="5Stars">
+                <figure class="fiveStars">
                   <figcaption>5 of 5 Stars</figcaption>
                   <!--stars ssvgs-->
                   <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-star" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="#ffffff" stroke-linecap="round" stroke-linejoin="round">
@@ -204,7 +204,7 @@
            <dl>
            <dt>Rating<span>:</span></dt>
             <dd>
-            <figure class="4Stars">
+            <figure class="fourStars">
               <figcaption>4 of 5 Stars</figcaption>
               <!--stars svg-->
               <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-star" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="#ffffff" stroke-linecap="round" stroke-linejoin="round">
@@ -235,7 +235,7 @@
          <dl>
            <dt>Rating<span>:</span></dt>
            <dd>
-             <figure class="4Stars">
+             <figure class="fourStars">
                <figcaption>4 of 5 Stars</figcaption>
                <!--stars svg-->
                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-star" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="#ffffff" stroke-linecap="round" stroke-linejoin="round">
