--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </li>
     </menu>
     <figure>
-      <img src="images/street-tacos.png" alt="tacos">
+      <img src="images/street-tacos.png" alt="two open soft tacos with lime">
     </figure>
     <div>
       <p>Street tacos are delicious, amazing, and oh so mouthwatering! Bite into tender steak, zesty lime flavor with a hint of spice and add on tomatoes, avocado, and onions for a savory bite you are going to love!</p>
@@ -133,7 +133,7 @@
         <h2>Need some side dishes?</h2>
         <section><a href="#">
           <h3>Mexican Rice</h3>
-          <img src="images/mexican-rice.png" alt="rice">
+          <img src="images/mexican-rice.png" alt="top view of mexican rice dish">
           <p>Traditional recipe with a twist.</p>
              <dl>
              <dt>Rating<span>:</span></dt>
@@ -168,7 +168,7 @@
         </section>
        <section><a href="#">
          <h3>Salsa</h3>
-         <img src="images/salsa.png" alt="salsa">
+         <img src="images/salsa.png" alt="salsa board with peppers, sour cream, taquitos and chips">
          <p>Just the right amount of spice.</p>
             <dl>
              <dt>Rating<span>:</span></dt>
@@ -203,7 +203,7 @@
     </section>
        <section><a href="#">
          <h3>Guacamole</h3>
-         <img src="guacamole.png" alt="guac">
+         <img src="images/guacamole.png" alt="top view of guacamole with lime and tomatoes in background">
          <p>Fresh and healthy.</p>
            <dl>
            <dt>Rating<span>:</span></dt>
@@ -238,7 +238,7 @@
     </section>
        <section><a href="#">
          <h3>Tortillas</h3>
-         <img src="images/tortillas.png" alt="tortilla">
+         <img src="images/tortillas.png" alt="stack of tortilla">
          <p>Easy to make and so good.</p>
          <dl>
            <dt>Rating<span>:</span></dt>
@@ -309,7 +309,7 @@
       <a href="#breakfast">
         <figure>
           <figcaption>Breakfast</figcaption>
-          <img src="images/breakfast.png" alt="breakkie">
+          <img src="images/breakfast.png" alt="sunny side eggs being moved from pan to plate">
         </figure>
       </a>
     </li>
@@ -317,7 +317,7 @@
       <a href="#brunch">
         <figure>
           <figcaption>Brunch</figcaption>
-          <img src="images/brunch.png" alt="brunch">
+          <img src="images/brunch.png" alt="aerial of group of hands clinking glasses over table">
         </figure>
       </a>
     </li>
@@ -325,7 +325,7 @@
       <a href="#lunch">
         <figure>
           <figcaption>Lunch</figcaption>
-          <img src="images/lunch.png" alt="lunch">
+          <img src="images/lunch.png" alt="close up of sandwhich with pulled meat, egg halves, and avocado on multigrain bread">
         </figure>
       </a>
     </li>
@@ -333,7 +333,7 @@
       <a href="#dinner">
         <figure>
           <figcaption>Dinner</figcaption>
-          <img src="images/dinner.png" alt="dinner">
+          <img src="images/dinner.png" alt="lamb chops with rosemary and veggies">
         </figure>
       </a>
     </li>
@@ -341,7 +341,7 @@
       <a href="#appetizers">
         <figure>
           <figcaption>Appetizers</figcaption>
-          <img src="images/appetizers.png" alt="appetizers">
+          <img src="images/appetizers.png" alt="aerial view of fancy cheese board">
         </figure>
       </a>
     </li>
@@ -349,7 +349,7 @@
       <a href="#desserts">
         <figure>
           <figcaption>Desserts</figcaption>
-          <img src="images/desserts.png" alt="desserts">
+          <img src="images/desserts.png" alt="four berry tarts">
         </figure>
       </a>
     </li>
@@ -357,7 +357,7 @@
       <a href="#beverages">
         <figure>
           <figcaption>Beverages</figcaption>
-          <img src="images/beverages.png" alt="beverages">
+          <img src="images/beverages.png" alt="cocktail in a wine glass with orange and rosemary">
         </figure>
       </a>
     </li>
@@ -452,7 +452,7 @@
         <figcaption>
           <small>Copyright 2022<br>Taco Cheesington</small>
         </figcaption>
-        <img src="Taco-cheesington.png" alt="tacoman">
+        <img src="images/taco-cheesington.png" alt="tacoman putting finishing touches on a dish">
       </figure>
     </section>
   </section>
