--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/cni5vvr.css">
     
     <title>Good Eats- Street Tacos</title>
 </head>
@@ -306,7 +307,7 @@
       </a>
     </li>
     <li>
-      <a href="#breakfast">
+      <a href="#">
         <figure>
           <figcaption>Breakfast</figcaption>
           <img src="images/breakfast.png" alt="sunny side eggs being moved from pan to plate">
@@ -314,7 +315,7 @@
       </a>
     </li>
         <li>
-      <a href="#brunch">
+      <a href="#">
         <figure>
           <figcaption>Brunch</figcaption>
           <img src="images/brunch.png" alt="aerial of group of hands clinking glasses over table">
@@ -322,7 +323,7 @@
       </a>
     </li>
         <li>
-      <a href="#lunch">
+      <a href="#">
         <figure>
           <figcaption>Lunch</figcaption>
           <img src="images/lunch.png" alt="close up of sandwhich with pulled meat, egg halves, and avocado on multigrain bread">
@@ -338,7 +339,7 @@
       </a>
     </li>
         <li>
-      <a href="#appetizers">
+      <a href="#">
         <figure>
           <figcaption>Appetizers</figcaption>
           <img src="images/appetizers.png" alt="aerial view of fancy cheese board">
@@ -346,7 +347,7 @@
       </a>
     </li>
         <li>
-      <a href="#desserts">
+      <a href="#">
         <figure>
           <figcaption>Desserts</figcaption>
           <img src="images/desserts.png" alt="four berry tarts">
@@ -354,7 +355,7 @@
       </a>
     </li>
         <li>
-      <a href="#beverages">
+      <a href="#">
         <figure>
           <figcaption>Beverages</figcaption>
           <img src="images/beverages.png" alt="cocktail in a wine glass with orange and rosemary">
